# Humanitarian-News-Dashboard

./: Makefile  README.md  docker-compose.yml  nixpacks.toml  railway.toml
backend/: .env.example  Dockerfile  Dockerfile.worker  Procfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml  requirements.txt  test_keyword.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py  settings.py
backend/app/api/: articles.py
backend/app/db/: models.py  session.py
backend/app/ingest/: pipeline.py  worker.py
backend/app/services/ai/: brief_generator.py
backend/app/services/ingest/: content_extractor.py
backend/app/services/nlp/: country_data.py  topic_data.py  topic_tagger.py
backend/app/services/rag/: chat_service.py
backend/scripts/: retag_articles.py  seed_humanitarian_sources.py  update_rss_sources.py
backend/tests/: __init__.py  conftest.py  test_content_extractor.py
frontend/: README.md  next.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/country-briefs/: page.tsx
frontend/app/topics/: page.tsx
frontend/components/: ArticleChat.tsx  Sidebar.tsx
worker/: railway.toml
