[tool.poetry]
name = "humanitarian-dashboard-backend"
version = "0.1.0"
description = "Humanitarian News Dashboard - Backend API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
psycopg = {extras = ["binary"], version = "^3.1.17"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
pgvector = "^0.2.4"
feedparser = "^6.0.11"
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
readability-lxml = "^0.8.1"
langdetect = "^1.0.9"
openai = "^1.10.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
apscheduler = "^3.10.4"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
